@@ -14,7 +14,9 @@ incorrect handling of conflicting hostnames which contain"-" - ID: 3454363
 Multicast query sending on wrong NIC - ID: 3463811
 free Factory's DNSTaskStarter when calling JmDNS.close() - ID: 3513302
 multiple ip addresses problem - ID: 3499483
+Failure to resolve services - ID: 3517826
 ConcurrentModificationException - ID: 3509434
+Failing to resolve jmdns registered services - ID: 3435220
 
 CHANGELOG 24 August 2011 Pierre Frisch
 Rev the source code to 3.4.1
